samples/_failures_safe/1761399277_c9c46c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7ff8585.c: In function ‘main’:
./samples/SAFE/__tmp_a7ff8585.c:127:17: error: expected expression at end of input
  127 |                 for (int k =
      |                 ^~~
./samples/SAFE/__tmp_a7ff8585.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7ff8585.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7ff8585.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7ff8585.c:127:17: error: expected declaration or statement at end of input
